--- a/src/frontends/onnx/tests/CMakeLists.txt
+++ b/src/frontends/onnx/tests/CMakeLists.txt
@@ -15,7 +15,7 @@ add_compile_definitions(
     ONNX_MODELS_DIR="${TEST_MODEL_ZOO}/onnx"
     ONNX_TEST_MODELS="${TEST_MODEL_ZOO}/onnx/"
     TEST_ONNX_MODELS_DIRNAME="${TEST_MODEL_ZOO}/onnx/"
-    MANIFEST="${SERIALIZED_ZOO}/onnx/unit_test.manifest"
+    MANIFEST="${TEST_MODEL_ZOO}/onnx/unit_test.manifest"
     SERIALIZED_ZOO="${TEST_MODEL_ZOO}")
 
 list(APPEND ONNX_TESTS_DEPENDENCIES openvino_template_extension)
