Added python install for samples stage

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -242,6 +242,13 @@ jobs:
             tar -xzf openvino_tests.tar.gz -C ${INSTALL_DIR} && rm openvino_tests.tar.gz || exit 1
           popd
 
+      - name: Install 'actions/setup-python@v4' dependencies
+        run: apt-get update && apt-get install -y libssl1.1
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
       - name: Install OpenVINO dependencies
         run: ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -c=dev -y
 
@@ -588,7 +595,9 @@ jobs:
 
       - name: Model Optimizer unit tests
         run: |
-          export PYTHONPATH=${OPENVINO_REPO}/tools/mo/:${LAYER_TESTS_INSTALL_DIR}:${INSTALL_TEST_DIR}
+          export PYTHONPATH=${OPENVINO_REPO}/tools/mo/:${LAYER_TESTS_INSTALL_DIR}:${INSTALL_TEST_DIR}:$PYTHONPATH
+          # required for MxNet
+          apt-get install -y libgomp1
 
           python3 -m pytest -s ${INSTALL_TEST_DIR}/mo/unit_tests \
               --junitxml=${INSTALL_TEST_DIR}/TEST-ModelOptimizer.xml
@@ -737,9 +746,7 @@ jobs:
         run: bash ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -y
 
       - name: Install 'actions/setup-python@v4' dependencies
-        run: |
-          apt-get update
-          apt-get install -y libssl1.1
+        run: apt-get update && apt-get install -y libssl1.1
 
       - uses: actions/setup-python@v4
         with:
