--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -878,6 +878,9 @@ jobs:
       MODEL_HUB_TESTS_INSTALL_DIR: ${{ github.workspace }}/install/tests/model_hub_tests
 
     steps:
+      - name: Check sudo
+        run: if [ "$(id -u)" -eq 0 ]; then apt update && apt --assume-yes install sudo; fi
+
       - name: Maximize build space
         run:  |
           sudo rm -rf /usr/local/lib/android # will release about 10 GB if you don't need Android
