--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -24,7 +24,7 @@ on:
       - master
 
 concurrency:
-  group: ${{ github.ref || github.run_id }}-linux
+  group: ${{ github.head_ref || github.run_id }}-linux
   cancel-in-progress: true
 
 jobs:
@@ -130,9 +130,6 @@ jobs:
             -DENABLE_SYSTEM_TBB=ON \
             -DENABLE_SYSTEM_OPENCL=ON \
             -DENABLE_SYSTEM_PUGIXML=ON \
-            -DBUILD_nvidia_plugin=OFF \
-            -DCUSTOM_OPERATIONS="calculate_grid;complex_mul;fft;grid_sample;sparse_conv;sparse_conv_transpose" \
-            -DOPENVINO_EXTRA_MODULES=${OPENVINO_CONTRIB_REPO}/modules \
             -DCMAKE_VERBOSE_MAKEFILE=ON \
             -DCMAKE_BUILD_TYPE=${{ env.CMAKE_BUILD_TYPE }} \
             -DCMAKE_COMPILE_WARNING_AS_ERROR=ON \
@@ -146,19 +143,6 @@ jobs:
 
       - name: Cmake build - OpenVINO
         run: cmake --build ${BUILD_DIR} --parallel --config ${{ env.CMAKE_BUILD_TYPE }}
-
-      - name: Cmake & Build - OpenVINO Contrib
-        if: ${{ 'false' }}
-        run: |
-          cmake \
-            -G "${{ env.CMAKE_GENERATOR }}" \
-            -DBUILD_nvidia_plugin=OFF \
-            -DCUSTOM_OPERATIONS="calculate_grid;complex_mul;fft;grid_sample;sparse_conv;sparse_conv_transpose" \
-            -DOpenVINODeveloperPackage_DIR=${BUILD_DIR} \
-            -S ${OPENVINO_CONTRIB_REPO}/modules \
-            -B ${OPENVINO_CONTRIB_BUILD_DIR}
-
-          cmake --build ${OPENVINO_CONTRIB_BUILD_DIR} --parallel --config ${{ env.CMAKE_BUILD_TYPE }}
 
       - name: Show ccache stats
         run: ccache --show-stats
@@ -179,6 +163,20 @@ jobs:
             tar -czvf ${BUILD_DIR}/openvino_tests.tar.gz *
           popd
 
+      - name: Build Debian packages
+        run: |
+          cmake -DCPACK_GENERATOR=DEB -DENABLE_PYTHON_PACKAGING=ON -UPYTHON* -DPYTHON_EXECUTABLE=/usr/bin/python3.8 -B ${BUILD_DIR}
+          cmake --build ${BUILD_DIR} --parallel --config ${{ env.CMAKE_BUILD_TYPE }} --target package
+
+      - name: Cmake & Build - OpenVINO Contrib
+        run: |
+          cmake \
+            -DBUILD_nvidia_plugin=OFF \
+            -DCUSTOM_OPERATIONS="calculate_grid;complex_mul;fft;grid_sample;sparse_conv;sparse_conv_transpose" \
+            -DOPENVINO_EXTRA_MODULES=${OPENVINO_CONTRIB_REPO}/modules \
+            -B ${BUILD_DIR}
+          cmake --build ${BUILD_DIR} --parallel --config ${{ env.CMAKE_BUILD_TYPE }}
+
       #
       # Upload build artifacts
       #
@@ -191,6 +189,14 @@ jobs:
           path: ${{ env.BUILD_DIR }}/openvino_package.tar.gz
           if-no-files-found: 'error'
 
+      - name: Upload openvino debian packages
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: openvino_debian_packages
+          path: ${{ env.BUILD_DIR }}/*.deb
+          if-no-files-found: 'error'
+
       - name: Upload openvino tests package
         if: ${{ always() }}
         uses: actions/upload-artifact@v3
@@ -198,6 +204,57 @@ jobs:
           name: openvino_tests
           path: ${{ env.BUILD_DIR }}/openvino_tests.tar.gz
           if-no-files-found: 'error'
+
+  Debian_Packages:
+    needs: Build
+    defaults:
+      run:
+        shell: bash
+    runs-on: ubuntu-20.04
+    container:
+      image: ubuntu:20.04
+    env:
+      DEBIAN_FRONTEND: noninteractive # to prevent apt-get from waiting user input
+      DEBIAN_PACKAGES_DIR: /__w/openvino/packages/
+
+    steps:
+      - name: Create Directories
+        run: mkdir -p ${DEBIAN_PACKAGES_DIR}
+
+      - name: Download OpenVINO debian packages
+        uses: actions/download-artifact@v3
+        with:
+          name: openvino_debian_packages
+          path: ${{ env.DEBIAN_PACKAGES_DIR }}
+
+      - name: Install debian packages & check conflicts
+        run: |
+          apt-get update
+          # Install debian packages from previous release
+          apt-get install --no-install-recommends gnupg wget ca-certificates
+          wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
+          apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
+          echo "deb https://apt.repos.intel.com/openvino/2023 ubuntu20 main" | tee /etc/apt/sources.list.d/intel-openvino-2023.list
+          apt-get update
+          apt-get install openvino -y
+          # install our local one and make sure the conflicts are resolved
+          apt-get install --no-install-recommends dpkg-dev -y
+          dpkg-scanpackages . /dev/null | gzip -9c > Packages.gz
+          echo "deb [trusted=yes] file:$(DEBIAN_PACKAGES_DIR) ./" | tee /etc/apt/sources.list.d/openvino-local.list
+          apt-get update
+          apt-get install openvino -y
+        working-directory: ${{ env.DEBIAN_PACKAGES_DIR }}
+
+      - name: Test debian packages
+        run: |
+          /usr/share/openvino/samples/cpp/build_samples.sh
+          /usr/share/openvino/samples/c/build_samples.sh
+          ~/openvino_cpp_samples_build/intel64/Release/hello_query_device
+          python3 /usr/share/openvino/samples/python/hello_query_device/hello_query_device.py
+          python3 -c 'from openvino import Core; print(Core().available_devices)'
+          python3 -c 'from openvino.frontend import FrontEndManager; assert len(FrontEndManager().get_available_front_ends()) == 6'
+          benchmark_app --help
+          ovc --help
 
   Samples:
     needs: Build
