--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -203,105 +203,105 @@ jobs:
           path: ${{ env.BUILD_DIR }}/openvino_tests.tar.gz
           if-no-files-found: 'error'
 
-  Samples:
-    needs: Build
-    defaults:
-      run:
-        shell: bash
-    runs-on: ubuntu-20.04
-    container:
-      image: ubuntu:20.04
-    env:
-      DEBIAN_FRONTEND: noninteractive # to prevent apt-get from waiting user input
-      INSTALL_DIR: /__w/openvino/openvino/install
-      INSTALL_TEST_DIR: /__w/openvino/openvino/install/tests
-      BUILD_DIR: /__w/openvino/openvino/build
-
-    steps:
-      - name: Create Directories
-        run: mkdir -p ${INSTALL_DIR} ${INSTALL_TEST_DIR}
-
-      #
-      # Initialize OpenVINO
-      #
-
-      - name: Download OpenVINO package
-        uses: actions/download-artifact@v3
-        with:
-          name: openvino_package
-          path: ${{ env.INSTALL_DIR }}
-
-      - name: Download OpenVINO tests package
-        uses: actions/download-artifact@v3
-        with:
-          name: openvino_tests
-          path: ${{ env.INSTALL_TEST_DIR }}
-
-      - name: Extract OpenVINO packages
-        run: |
-          pushd ${INSTALL_DIR}
-            tar -xzf openvino_package.tar.gz -C ${INSTALL_DIR} && rm openvino_package.tar.gz || exit 1
-          popd
-          pushd ${INSTALL_TEST_DIR}
-            tar -xzf openvino_tests.tar.gz -C ${INSTALL_DIR} && rm openvino_tests.tar.gz || exit 1
-          popd
-
-      - name: Install 'actions/setup-python@v4' dependencies
-        run: apt-get update && apt-get install -y libssl1.1
-
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install OpenVINO dependencies
-        run: ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -c=dev -y
-
-      - name: Build cpp samples - GCC
-        run: ${INSTALL_DIR}/samples/cpp/build_samples.sh -i ${INSTALL_DIR} -b ${BUILD_DIR}/cpp_samples
-        env:
-          CMAKE_COMPILE_WARNING_AS_ERROR: 'ON'
-
-      - name: Build cpp samples - Clang
-        run: |
-          apt-get install -y clang
-          ${INSTALL_DIR}/samples/cpp/build_samples.sh -i ${INSTALL_DIR} -b ${BUILD_DIR}/cpp_samples_clang
-        env:
-          CMAKE_COMPILE_WARNING_AS_ERROR: 'ON'
-          CC: clang
-          CXX: clang++
-
-      - name: Build c samples
-        run: ${INSTALL_DIR}/samples/c/build_samples.sh -i ${INSTALL_DIR} -b ${BUILD_DIR}/c_samples
-        env:
-          CMAKE_COMPILE_WARNING_AS_ERROR: 'ON'
-
-      #
-      # Tests
-      #
-
-      - name: Samples tests
-        run: |
-          export WORKSPACE=${INSTALL_DIR}
-          export IE_APP_PATH=${INSTALL_DIR}/samples_bin
-          export IE_APP_PYTHON_PATH=${INSTALL_DIR}/samples/python
-          export SHARE=${INSTALL_TEST_DIR}/smoke_tests/samples_smoke_tests_data
-
-          python3 -m pip install --ignore-installed PyYAML -r ${INSTALL_TEST_DIR}/smoke_tests/requirements.txt
-          export LD_LIBRARY_PATH=${IE_APP_PATH}:$LD_LIBRARY_PATH
-
-          source ${INSTALL_DIR}/setupvars.sh
-
-          python3 -m pytest -sv ${INSTALL_TEST_DIR}/smoke_tests \
-            --env_conf ${INSTALL_TEST_DIR}/smoke_tests/env_config.yml \
-            --junitxml=${INSTALL_TEST_DIR}/TEST-SamplesSmokeTests.xml
-
-      - name: Upload Test Results
-        uses: actions/upload-artifact@v3
-        if: ${{ always() }}
-        with:
-          name: test-results-cpp
-          path: ${{ env.INSTALL_TEST_DIR }}/TEST*.xml
-          if-no-files-found: 'error'
+#  Samples:
+#    needs: Build
+#    defaults:
+#      run:
+#        shell: bash
+#    runs-on: ubuntu-20.04
+#    container:
+#      image: ubuntu:20.04
+#    env:
+#      DEBIAN_FRONTEND: noninteractive # to prevent apt-get from waiting user input
+#      INSTALL_DIR: /__w/openvino/openvino/install
+#      INSTALL_TEST_DIR: /__w/openvino/openvino/install/tests
+#      BUILD_DIR: /__w/openvino/openvino/build
+#
+#    steps:
+#      - name: Create Directories
+#        run: mkdir -p ${INSTALL_DIR} ${INSTALL_TEST_DIR}
+#
+#      #
+#      # Initialize OpenVINO
+#      #
+#
+#      - name: Download OpenVINO package
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: openvino_package
+#          path: ${{ env.INSTALL_DIR }}
+#
+#      - name: Download OpenVINO tests package
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: openvino_tests
+#          path: ${{ env.INSTALL_TEST_DIR }}
+#
+#      - name: Extract OpenVINO packages
+#        run: |
+#          pushd ${INSTALL_DIR}
+#            tar -xzf openvino_package.tar.gz -C ${INSTALL_DIR} && rm openvino_package.tar.gz || exit 1
+#          popd
+#          pushd ${INSTALL_TEST_DIR}
+#            tar -xzf openvino_tests.tar.gz -C ${INSTALL_DIR} && rm openvino_tests.tar.gz || exit 1
+#          popd
+#
+#      - name: Install 'actions/setup-python@v4' dependencies
+#        run: apt-get update && apt-get install -y libssl1.1
+#
+#      - uses: actions/setup-python@v4
+#        with:
+#          python-version: '3.11'
+#
+#      - name: Install OpenVINO dependencies
+#        run: ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -c=dev -y
+#
+#      - name: Build cpp samples - GCC
+#        run: ${INSTALL_DIR}/samples/cpp/build_samples.sh -i ${INSTALL_DIR} -b ${BUILD_DIR}/cpp_samples
+#        env:
+#          CMAKE_COMPILE_WARNING_AS_ERROR: 'ON'
+#
+#      - name: Build cpp samples - Clang
+#        run: |
+#          apt-get install -y clang
+#          ${INSTALL_DIR}/samples/cpp/build_samples.sh -i ${INSTALL_DIR} -b ${BUILD_DIR}/cpp_samples_clang
+#        env:
+#          CMAKE_COMPILE_WARNING_AS_ERROR: 'ON'
+#          CC: clang
+#          CXX: clang++
+#
+#      - name: Build c samples
+#        run: ${INSTALL_DIR}/samples/c/build_samples.sh -i ${INSTALL_DIR} -b ${BUILD_DIR}/c_samples
+#        env:
+#          CMAKE_COMPILE_WARNING_AS_ERROR: 'ON'
+#
+#      #
+#      # Tests
+#      #
+#
+#      - name: Samples tests
+#        run: |
+#          export WORKSPACE=${INSTALL_DIR}
+#          export IE_APP_PATH=${INSTALL_DIR}/samples_bin
+#          export IE_APP_PYTHON_PATH=${INSTALL_DIR}/samples/python
+#          export SHARE=${INSTALL_TEST_DIR}/smoke_tests/samples_smoke_tests_data
+#
+#          python3 -m pip install --ignore-installed PyYAML -r ${INSTALL_TEST_DIR}/smoke_tests/requirements.txt
+#          export LD_LIBRARY_PATH=${IE_APP_PATH}:$LD_LIBRARY_PATH
+#
+#          source ${INSTALL_DIR}/setupvars.sh
+#
+#          python3 -m pytest -sv ${INSTALL_TEST_DIR}/smoke_tests \
+#            --env_conf ${INSTALL_TEST_DIR}/smoke_tests/env_config.yml \
+#            --junitxml=${INSTALL_TEST_DIR}/TEST-SamplesSmokeTests.xml
+#
+#      - name: Upload Test Results
+#        uses: actions/upload-artifact@v3
+#        if: ${{ always() }}
+#        with:
+#          name: test-results-cpp
+#          path: ${{ env.INSTALL_TEST_DIR }}/TEST*.xml
+#          if-no-files-found: 'error'
 
   Conformance_Tests:
     needs: Build
@@ -367,7 +367,7 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install Conformance Script Dependencies
+      - name: Install Dependencies
         run: |
           ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -c=dev -y
           
