--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -372,6 +372,7 @@ jobs:
           ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -c=dev -y
           
           python3 -m pip install -r ${CONFORMANCE_TOOLS_DIR}/requirements.txt
+          python3 -m pip install pip_system_certs
 
       #
       # Tests
