added git installation

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -965,6 +965,8 @@ jobs:
         run: |
           # libssl1.1 - 'python3 -m pip' in self-hosted runner
           sudo apt install --assume-yes --no-install-recommends libssl1.1
+          # install git
+          sudo apt-get install --assume-yes --no-install-recommends git ca-certificates
 
       - name: Maximize build space
         run:  |
