--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -966,8 +966,8 @@ jobs:
           # libssl1.1 - 'python3 -m pip' in self-hosted runner
           sudo apt install --assume-yes --no-install-recommends libssl1.1
           # install git (requeried to build pip deps from the sources)
-          # install g++ to build 'detectron2' and 'natten' wheels
-          sudo apt-get install --assume-yes --no-install-recommends g++ git ca-certificates
+          # install 'g++' and 'python3-dev' to build 'detectron2' and 'natten' wheels
+          sudo apt-get install --assume-yes --no-install-recommends g++ python3-dev git ca-certificates
 
       - name: Maximize build space
         run:  |
