--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1003,12 +1003,13 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.11-dev'
 
       - name: Install Python wheels
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install openvino --find-links=${INSTALL_DIR}/tools
+          python3 -m pip install Cython
 
       - name: Install PyTorch tests requirements
         run: |
