--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -986,7 +986,7 @@ jobs:
           python3 -m pip cache purge
           echo "Available storage:"
           df -h
-          du -h -d0 ~/.cache ~/*
+          du -h -d0 ~/.cache
 
       - name: PyTorch Models Tests
         run: |
@@ -1000,7 +1000,7 @@ jobs:
         run: |
           echo "Available storage:"
           df -h
-          du -h -d0 ~/.cache ~/*
+          du -h -d0 ~/.cache
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
